New changes across pages
- Tried to fix MainActivity2 page to have home page work (not successfully)
- Modify the main menu on home screen
- Remove commute and bus alert since they do not exist in our project
- Add reminder icon

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/white"
-    tools:context=".login">
+    tools:context=".Login">
 
 
 
