--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -259,43 +259,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:elevation="5dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="0dp"
-                        app:cardMaxElevation="5dp">
-
-                        <LinearLayout
-                            android:id="@+id/commute_action"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:padding="15dp">
-
-                            <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_gravity="center"
-                                app:srcCompat="@drawable/ic_baseline_bus_alert_24" />
-
-                            <TextView
-                                android:id="@+id/textView7"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:text="Commute"
-                                android:textSize="16dp"
-
-                                android:textColor="@color/black" />
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
                         android:layout_marginLeft="5dp"
                         android:elevation="5dp"
                         app:cardCornerRadius="10dp"
@@ -303,7 +266,7 @@
                         app:cardMaxElevation="5dp">
 
                         <LinearLayout
-                            android:id="@+id/locations_action"
+                            android:id="@+id/reminder_action"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
@@ -314,14 +277,14 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 android:layout_gravity="center"
-                                app:srcCompat="@drawable/ic_baseline_person_pin_circle_24" />
+                                app:srcCompat="@drawable/ic_reminder_24" />
 
                             <TextView
                                 android:id="@+id/textView8"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="My\nLocations"
+                                android:text="Reminder"
                                 android:textSize="16dp"
 
                                 android:textColor="@color/black" />
@@ -332,15 +295,15 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="55dp"
+                        android:layout_marginLeft="55dp"
                         android:elevation="5dp"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="0dp"
                         app:cardMaxElevation="5dp">
 
                         <LinearLayout
-                            android:id="@+id/task_action"
+                            android:id="@+id/calendar_action"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
@@ -351,7 +314,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_weight="1"
-                                app:srcCompat="@drawable/ic_baseline_task_alt_24" />
+                                app:srcCompat="@drawable/ic_baseline_calendar_month_24" />
 
                             <TextView
                                 android:id="@+id/textView9"
@@ -378,7 +341,7 @@
                         app:cardMaxElevation="5dp">
 
                         <LinearLayout
-                            android:id="@+id/notes_action"
+                            android:id="@+id/diary_action"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
