--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -9,25 +9,20 @@
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
 
-
         <item
-            android:id="@+id/nav_tasks"
-            android:icon="@drawable/ic_baseline_task_alt_24"
-            android:title="@string/menu_tasks" />
-        <item
-            android:id="@+id/nav_commute"
-            android:icon="@drawable/ic_baseline_bus_alert_24"
-            android:title="@string/menu_commute" />
-
-        <item
-            android:id="@+id/nav_locations"
-            android:icon="@drawable/ic_baseline_person_pin_circle_24"
-            android:title="@string/menu_locations" />
+            android:id="@+id/nav_calendar"
+            android:icon="@drawable/ic_baseline_calendar_month_24"
+            android:title="@string/calendar" />
 
         <item
             android:id="@+id/nav_notes"
-            android:icon="@drawable/ic_baseline_sticky_note_2_24"
-            android:title="@string/menu_notes" />
+            android:icon="@drawable/ic_baseline_edit_note_24"
+            android:title="@string/diary" />
+
+        <item
+            android:id="@+id/nav_reminder"
+            android:icon="@drawable/ic_reminder_24"
+            android:title="@string/reminder" />
 
 
     </group>
